LLM4Config/assets/angelnu_pod-gateway.yaml
---
# Source: pod-gateway/templates/common.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-pod-gateway
  labels:
    app.kubernetes.io/service: my-pod-gateway
    app.kubernetes.io/instance: my-pod-gateway
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: pod-gateway
    app.kubernetes.io/version: v1.8.1
    helm.sh/chart: pod-gateway-6.5.1
  annotations:
spec:
  type: ClusterIP
  clusterIP: None
  
  ports:
    - port: 4789
      targetPort: http
      protocol: UDP
      name: http
  selector:
    app.kubernetes.io/instance: my-pod-gateway
    app.kubernetes.io/name: pod-gateway
---
# Source: pod-gateway/templates/webhook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-pod-gateway-webhook
  labels:
    helm.sh/chart: pod-gateway-6.5.1
    app.kubernetes.io/name: pod-gateway
    app.kubernetes.io/instance: my-pod-gateway
    app.kubernetes.io/version: "v1.8.1"
    app.kubernetes.io/managed-by: Helm
    
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
  selector:
    app.kubernetes.io/name: pod-gateway-webhook
    app.kubernetes.io/instance: my-pod-gateway
---
# Source: pod-gateway/templates/common.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-pod-gateway
  labels:
    app.kubernetes.io/instance: my-pod-gateway
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: pod-gateway
    app.kubernetes.io/version: v1.8.1
    helm.sh/chart: pod-gateway-6.5.1
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: pod-gateway
      app.kubernetes.io/instance: my-pod-gateway
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pod-gateway
        app.kubernetes.io/instance: my-pod-gateway
    spec:
      
      serviceAccountName: default
      automountServiceAccountToken: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      containers:
        - name: my-pod-gateway
          image: ghcr.io/angelnu/pod-gateway:v1.8.1
          imagePullPolicy: IfNotPresent
          command:
              
            - /bin/gateway_sidecar.sh
          securityContext:
            capabilities:
              add:
              - NET_RAW
              - NET_ADMIN
          ports:
            - name: http
              containerPort: 4789
              protocol: UDP
          volumeMounts:
            - name: config
              mountPath: /config
              readOnly: true
          
      volumes:
        - name: config
          configMap:
            defaultMode: 365
            name: my-pod-gateway
---
# Source: pod-gateway/templates/webhook-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-pod-gateway-webhook
  labels:
    helm.sh/chart: pod-gateway-6.5.1
    app.kubernetes.io/name: pod-gateway
    app.kubernetes.io/instance: my-pod-gateway
    app.kubernetes.io/version: "v1.8.1"
    app.kubernetes.io/managed-by: Helm
    
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      
      app.kubernetes.io/name: pod-gateway-webhook
      app.kubernetes.io/instance: my-pod-gateway
  template:
    metadata:
      labels:
      
        app.kubernetes.io/name: pod-gateway-webhook
        app.kubernetes.io/instance: my-pod-gateway
    spec:
      volumes:
        - name: certs
          secret:
            secretName: my-pod-gateway-webhook-tls
            defaultMode: 420
      containers:
        - name: webhook
          image: ghcr.io/angelnu/gateway-admision-controller:v3.10.0
          args:
            - --webhook-listen-address=:8080
            - --gateway=my-pod-gateway.default.svc.cluster.local
            - --DNS=172.16.0.1,172.16.0.2
            - --configmapName=my-pod-gateway
            - --setGatewayLabel=setGateway
            - --setGatewayAnnotation=setGateway
            - --setGatewayDefault
            # Static
            - --tls-cert-file-path=/tls/tls.crt
            - --tls-key-file-path=/tls/tls.key
            - --DNSPolicy=None
            # Init container
            - --initImage=ghcr.io/angelnu/pod-gateway:v1.8.1
            - --initImagePullPol=IfNotPresent
            - --initCmd=/bin/client_init.sh
            - --initMountPoint=/config
            # Sidecar container
            - --sidecarImage=ghcr.io/angelnu/pod-gateway:v1.8.1
            - --sidecarImagePullPol=IfNotPresent
            - --sidecarCmd=/bin/client_sidecar.sh
            - --sidecarMountPoint=/config
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: certs
              readOnly: true
              mountPath: /tls
          livenessProbe:
            httpGet:
              path: /wh/health
              port: 8080
              scheme: HTTPS
            initialDelaySeconds: 1
            timeoutSeconds: 10
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /wh/health
              port: 8080
              scheme: HTTPS
            initialDelaySeconds: 1
            timeoutSeconds: 10
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 5
          startupProbe:
            httpGet:
              path: /wh/health
              port: 8080
              scheme: HTTPS
            timeoutSeconds: 1
            periodSeconds: 1
            successThreshold: 1
            failureThreshold: 30
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
---
# Source: pod-gateway/templates/webhook-admissionregistration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: "my-pod-gateway"
  labels:
    helm.sh/chart: pod-gateway-6.5.1
    app.kubernetes.io/name: pod-gateway
    app.kubernetes.io/instance: my-pod-gateway
    app.kubernetes.io/version: "v1.8.1"
    app.kubernetes.io/managed-by: Helm
    
  annotations:
    cert-manager.io/inject-ca-from: "default/my-pod-gateway-webhook-tls"
webhooks:
- name: "my-pod-gateway.svc.cluster.local"
  namespaceSelector:
    matchLabels:
      routed-gateway: "true"
  rules:
  - apiGroups:   [""]
    apiVersions: ["v1"]
    operations:  ["CREATE"]
    resources:   ["pods"]
    scope:       "Namespaced"
  clientConfig:
    service:
      namespace: "default"
      name: my-pod-gateway-webhook
      path: /wh/mutating/setgateway
      port: 8080
  admissionReviewVersions: ["v1", "v1beta1"]
  sideEffects: None
  timeoutSeconds: 5
